# leaf-odbc-driver

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/: RELEASE.md
.github/workflows/: ci.yml  release.yml
docs/: ODBC_SETUP.md  QGIS_QUICKSTART.md  QGIS_SETUP.md
examples/: odbc.ini.example  odbcinst.ini.example  test_connection.sh
include/leafodbc/: common.h  conn_string.h  handles.h  leaf_client.h  metadata.h  resultset.h  sql_guard.h
src/: conn_string.cpp  handles.cpp  leaf_client.cpp  metadata.cpp  odbc_api.cpp  resultset.cpp  sql_guard.cpp
